--- a/app/src/main/res/layout/activity_asks_question.xml
+++ b/app/src/main/res/layout/activity_asks_question.xml
@@ -20,6 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
     <ScrollView
+        android:id="@+id/scroll_question"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -38,7 +39,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:orientation="vertical">
-        </LinearLayout>
+            android:orientation="vertical"></LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
